# AUVSimBench

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
auv_sim_bench/: dynamics.py  sim_node.py
config/: barracuda.yaml  sim.yaml
launch/: sim.launch.py
rviz/: auv_sim.rviz
test/: test_dynamics.py
