<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_sim_bench</name>
  <version>0.1.1</version>
  <description>Lightweight 6-DOF AUV physics simulator that publishes consistent IMU, DVL, depth and ground-truth topics for dry-testing underwater state estimation. Pure ROS 2 / numpy, runs on a Jetson.</description>
  <maintainer email="231155141+wuisabel-gif@users.noreply.github.com">wuisabel-gif</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
